fix some changes

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ PLAID_PRODUCTS=auth,transactions,identity
 PLAID_COUNTRY_CODES=US,CA
 
 #DWOLLA
-DWOLLA_KEY=
-DWOLLA_SECRET=
-DWOLLA_BASE_URL=
-DWOLLA_ENV=
+DWOLLA_KEY=8W4zK5crD5g4bIADAQ3CWjKDkvAeKWF3I5pk37MTPsTiOCie6b
+DWOLLA_SECRET=fk0GeVeE6XY2kHB3ULNO8Lkkb8Nvot9jdHGIXfH4ZH3y5EbmYk
+DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
+DWOLLA_ENV=sandbox
